Implement translation for /sparta and /athens, implement convertToCamelCase and translateGoals helper functions, update tests

--- a/src/locales/en/general.json
+++ b/src/locales/en/general.json
@@ -4,5 +4,10 @@
             "text" : "Start earning",
             "altText" : "Join & start earning"
         }
+    },
+    "roles" : {
+        "validator" : "Validator",
+        "councilMember" : "Council Member",
+        "storageProvider" : "Storage Provider"
     }
 }
