Implement translation for /alexandria and /constantinople, move metadata title translation into general, update tests

--- a/src/locales/en/general.json
+++ b/src/locales/en/general.json
@@ -11,5 +11,8 @@
         "storageProvider" : "Storage Provider",
         "contentCreator" : "Content Creator",
         "contentCurator" : "Content Curator"
+    },
+    "siteMetadata" : {
+        "title" : "Joystream: The video platform DAO"
     }
 }
