--- a/src/locales/en/roles.json
+++ b/src/locales/en/roles.json
@@ -61,7 +61,7 @@
         },
         "contentCurator" : {
             "title" : "Content Curator",
-            "overview" : "All of the media content published on the platform lives in an on-chain content directory. There are a range of different content types, and each type has a schema for a rich description of its structure, function and policies. For the effective use of of content, for example in rendering, discovery and monetization, it is critical to ensure the validity of the published information for all content. In particular, it is also important to resolve possible disputes about ownership and presence of any piece of content on the platform.It is the task of the content curators to do the work involved in processes that address these objectives.",
+            "overview" : "All of the media content published on the platform lives in an on-chain content directory. There are a range of different content types, and each type has a schema for a rich description of its structure, function and policies. For the effective use of of content, for example in rendering, discovery and monetization, it is critical to ensure the validity of the published information for all content. In particular, it is also important to resolve possible disputes about ownership and presence of any piece of content on the platform. It is the task of the content curators to do the work involved in processes that address these objectives.",
             "responsibilities" : {
                 "monitorContent" : "Monitor the publishing of new content into the content directory, and respond to reports about contested publications",
                 "adjudicateDisputes" : "Adjudicate possible dispute processes resulting from reports from users",
@@ -76,7 +76,7 @@
         "contentCreator" : {
             "title" : "Content Creator",
             "overview" : "As a video platform, one of the most important platform assets is the content published on the platform. Since video is such a flexible media type, which can encompass a wide range of content categories, it is the primary focus. However, the intention is to support a broader range of content types over time. The content creators are those involved in creating, publishing and monetizing content on the platform.",
-            "responsbilities" : {
+            "responsibilities" : {
                 "publishContent" : "Publish content and build an audience"
             },
             "requirements" : {
@@ -87,7 +87,7 @@
         "contentLead" : {
             "title" : "Content Lead",
             "overview" : "The Council has the power to appoint a Content Curator Lead for the network who can hire further Content Curators. The Content Lead also decides on priorities for curation. If necessary, upon discussing with the council, the Lead can also decide to fire curators who are not performing their jobs adequately.",
-            "responsbilities" : {
+            "responsibilities" : {
                 "monitorPublishing" : "Monitor the publishing of new content into the content directory, and respond to reports about contested publications",
                 "adjudicateDisputes" : "Adjudicate possible dispute processes resulting from reports from users",
                 "updateInformation" : "Update information on content to be accurate",
@@ -103,7 +103,7 @@
             "overview" : "A membership is an integrated representation of identifying information and associated activities of an actor on the platform. The direct way of establishing membership will be to simply pay a one time fee. However, since its currently challenging for many prospective non-technical end users to obtain, store and use crypto assets, there will be a way for users to get a membership for free, which will not require any tokens in order to use the platform in a limited capacity. The membership screener is the role responsible for granting such memberships, while screening for Sybill attackers and abusers.",
             "responsibilities": {
                 "runAndMaintainScreeningNodes" : "Run and maintain screening nodes that are always available and performant",
-                "collaborate" : "Collaborate with <0>Membership Curators</0> and <1> Builders</1> to improve screening mechanisms by discussing screening techniques, sharing traffic information",
+                "collaborate" : "Collaborate with <0>Membership Curators</0> and <1>Builders</1> to improve screening mechanisms by discussing screening techniques, sharing traffic information",
                 "beResponsive" : "Be responsive and reactive to changing circumstances"
             },
             "requirements" : {
@@ -169,7 +169,7 @@
         },
         "builder" : {
             "title" : "Builder",
-            "overview" : "The platform runtime, tools, infrastructure software and user facing applications are all meant to evolve over time. A diverse set of contributors are required to facilitate this, including <0 /> <0 /> <1> <2> <strong>Developers:</strong> Software developers, Data scientists, DevOps and QA </2> <2> <strong>Designers:</strong> Web, Mobile, UX/UI, Branding and Visual Design </2> <2> <strong>Product Managers:</strong> Digital Product Managers, Product Owners and Analysts </2> </1> <0 /> All of these contributors are collectively referred to as Builders. Anyone can contribute in the same mode as any of these possible contributor functions, as all the platform source assets are open source and developed in the open. Being a Builder means that one has some scope of responsibility in ongoing efforts, and that one has some predefined reward scheme associated with this responsibility.",
+            "overview" : "The platform runtime, tools, infrastructure software and user facing applications are all meant to evolve over time. A diverse set of contributors are required to facilitate this, including <0/><0/> <1> <0><0>Developers:</0> Software developers, Data scientists, DevOps and QA </0><0><0>Designers:</0> Web, Mobile, UX/UI, Branding and Visual Design </0> <0><0>Product Managers:</0> Digital Product Managers, Product Owners and Analysts </0> </0> <0 /> All of these contributors are collectively referred to as Builders. Anyone can contribute in the same mode as any of these possible contributor functions, as all the platform source assets are open source and developed in the open. Being a Builder means that one has some scope of responsibility in ongoing efforts, and that one has some predefined reward scheme associated with this responsibility.",
             "responsibilities": {
                 "collaborate" : "Collaborate with almost every other kind of platform member to maintain and improve the platform"
             },
