--- a/src/locales/en/brand.json
+++ b/src/locales/en/brand.json
@@ -153,6 +153,39 @@
                 "notLimiting" : "Guides should be by no means limiting, they should only serve the purpose of providing consistency for animations."
             }
         },
+        "story" : {
+            "header" : {
+                "title" : "Joystream Brand Story",
+                "description" : "Joystream offers a modern, experimental solution to the problem of accountable governance in digital media. <0>Our objective is to build a user-governed video platform with a strong sense of community and freedom.</0>",
+                "buttonText" : "Manifesto"
+            },
+            "website" : {
+                "title" : "The Website",
+                "linkText" : "Visit the Website"
+            },
+            "description" : {
+                "header" : "Our brand identity consists of few key visual elements: our logo, typeface, illustrations, patterns, colour palette and iconography.",
+                "meaningfulRole" : "Each of these elements has a meaningful role in brand identity as established in the guidelines. But combining all of these components builds much more than just a visual experience.",
+                "powerfulTool" : "Joystream branding is a powerful tool for communication with all of its users throughout their whole experience.",
+                "experimental" : "Fundamentally, our effort is an experimental one; we do not have all the answers, and we want to be honest about that in our communication.",
+                "empowering" : "We are not promising cheaper, faster or nicer, like one typically would when selling a consumer widget or service. Instead we have hope that we can build something more empowering and accountable through our process of experimentation.",
+                "governance" : "Lastly, at the core of our vision is governance, so what we are building is never finished; we are only constructing the first piece. It is a dynamic effort we hope communities will carry forward in amazing ways, we are just providing the first set of tools.",
+                "footer" : "For the reasons outlined above, our brand should carry this feeling of experimentation, excitement and building something ethical and dynamic."
+            },
+            "logo" : {
+                "title" : "We want to free the media, inspire people and connect them using platform",
+                "uniqueness" : "Creating the Joystream brand proved to be challenging due to its uniqueness and the fact that it is continually evolving.",
+                "requirements" : "Not only did we have to take into account a very wide and diverse user base but also we had to create a brand that will be futureproof and flexible enough to cover both the existing and upcoming requirements of the project.",
+                "branding" : "Joystream branding itself is quite metaphoric and symbolic, often referring to symbolism of ancient cities, culture, arts and philosophies.",
+                "challenge" : "The challenge was to combine it with very modern and complex technologies."
+            },
+            "explanation" : {
+                "title" : "Explaining the Brand",
+                "balance" : "Our new branding is about finding good balance between a very simplistic tone of communication with the symbolism and complexity of modern world problems and technologies.",
+                "patterns" : "Our branding uses mosaic, geometrical patterns and shapes combined with explicit colours and symbolic  illustrations.",
+                "style" : "We also deploy descriptive icons in combination with simple glyph style system icons and an experimental  illustration style."
+            }
+        },
         "button" : {
             "text" : {
                 "downloadLogo" : "Download Logo"
