--- a/src/locales/en/founding-members.json
+++ b/src/locales/en/founding-members.json
@@ -13,7 +13,9 @@
             "account" : "Account",
             "next" : "Next",
             "howItWorks" : "How it works.",
-            "inputPlaceholder" : "e.g. joedoe"  
+            "inputPlaceholder" : "e.g. joedoe",
+            "inductionDate" : "Induction Date",
+            "joinOurDiscord" : "Join our Discord"
         },
         "scoringPeriod" : {
             "title" : "Current scoring period",
@@ -23,7 +25,85 @@
             "weeks" : "WEEKS",
             "days" : "DAYS",
             "hours" : "HOURS",
-            "minutes" : "MINUTES"
+            "minutes" : "MINUTES",
+            "submitSummary" : "Submit Summary",
+            "periodAnnouncement" : "Period Announcement",
+            "announcement" : "Announcement"
+        },
+        "landing" : {
+            "siteMetadata" : {
+                "title" : "Founding Members",
+                "description" : "Information and data regarding the new Founding Members Program of the Joystream platform."
+            },
+            "hero" : { 
+                "title" : "Joystream Founding Member Program",
+                "text" : "Founding Members are highly effective project contributors awarded JOY tokens in the mainnet genesis block.",
+                "imageAlt" : "founding members visual"
+            },
+            "list" : {
+                "currentMembers" : "Current founding members",
+                "newMembers" : "New founding members",
+                "iconAlt" : "icon of founding member"
+            },
+            "benefits" : {
+                "title" : "What is the Founding <0/> Member Program <0/> and why does it exist?",
+                "currentlyBuilding" : "While Jsgenesis is the team currently building the technology behind the Joystream project, we will not be around forever, and we are instead entrusting the future operation of the Joystream DAO to our community members.",
+                "foundingMembers": "The Founding Member Program formally allocates JOY tokens among some of our highest quality community members in recognition of their contributions to the project and ensures that a sufficiently large, effective and motivated community of users is ready to occupy all the different roles required to run, evolve and grow the platform on mainnet.",
+                "benefits" : "Benefits",
+                "benefitsAlternate" : "Benefits of becoming a founding member",
+                "payout" : {
+                    "title" : "Tokens",
+                    "text" : "allocated tokens in the genesis block of the Joystream mainnet as a result of high quality participation and recruiting other participants"
+                },
+                "membership" : {
+                    "title" : "Membership Status",
+                    "text" : "special status membership assigned in genesis block, which will have a visually distinguished presentation in Pioneer and other products"
+                },
+                "avatar" : {
+                    "title" : "Handcrafted Avatar",
+                    "text" : "receive a handcrafted premium membership avatar and be honoured on the official project website and social media leading up to mainnet"
+                },
+                "itemImageAlt" : "benefit item"
+            },
+            "takePart" : {
+                "title" : "How to participate in the program",
+                "introduceYourself" : {
+                    "text" : "Introduce yourself on Discord.",
+                    "altText" : "Introduce yourself in our Discord."
+                },
+                "contribute" : {
+                    "text" : "Make contributions to the project.",
+                    "contributions" : "<0><0>training other participants</0><0>writing blog posts and documentation</0><0>creating and publishing new video content</0><0>participating in platform roles on the testnet</0><0>finding and reporting bugs and errors</0><0>completing official bounties</0><0>creative and design work</0></0>"
+                },
+                "report" : "Regularly report your activity.",
+                "earnPoints" : "Earn leaderboard points.",
+                "becomeFM" : "Become a founding member!",
+                "buttonText" : "Join Discord",
+                "excluded" : "Countries that are excluded from that program: ",
+                "usFlagAlt" : "us flag icon",
+                "tokensAlt" : "two tokens"
+            },
+            "keyMetrics" : {
+                "title" : "Key metrics for the program",
+                "initialTokenPool" : "size of initial token pool",
+                "numberOfFM" : "number of founding members",
+                "numberOfCandidates" : "number of founding member candidates",
+                "leaderboards" : "Leaderboards",
+                "foundingMembersButton" : "All Founding Member Scores",
+                "regularMembersButton" : "All Regular Member Scores",
+                "fullProgramRules" : "Read the full program rules"
+            },
+            "cta" : {
+                "title" : "Discuss the program",
+                "joinDiscord" : "Begin your founding member journey by joining our Discord group and requesting your first testnet tokens.",
+                "askQuestions" : "Here you can also ask question about many aspects of the program and find out the areas where you can contribute right away.",
+                "joinNow" : "Join now",
+                "imageAlt" : "founding members visual"
+            },
+            "disclaimer" : {
+                "title" : "Disclaimer",
+                "text" : "This disclaimer applies to the webpage accessible at <0>www.joystream.org/token</0> as well as all other webpages, digital services or applications published by Jsgenesis (the “Company”). The disclaimer also applies to any material published by Company in any other format in connection with the JOY token (the “Token”). Publications made by Company and all information contained within them are not directed at or intended for use by any person resident or located in any jurisdiction where (1) the distribution of such information is contrary to the laws of such jurisdiction; or (2) such distribution is prohibited without obtaining the necessary licenses or authorizations by the relevant branch, subsidiary or affiliate office of Company and such licenses or authorizations have not been obtained. Company does not provide investment, legal or tax advice and nothing herein should be construed as being financial, legal, tax or other advice. Unless specifically stated otherwise, all price information is indicative only. No representation or warranty, either express or implied, is provided in relation to the accuracy, completeness or reliability of the materials, nor are they a complete statement of the securities, markets or developments referred to herein. The materials should not be regarded by recipients as a substitute for the exercise of their own judgment. All information and materials published, distributed or otherwise made available by Company in relation to Token are provided for informational purposes, for your non-commercial, personal use only. No information or materials published by Company constitutes a solicitation, an offer, or a recommendation to buy or sell any investment instruments, to effect any transactions, or to conclude any legal act of any kind whatsoever."
+            }
         },
         "leaderboards" : {
             "siteMetadata" : {
