Add participation payout, fix landing page subtext again

--- a/src/locales/en/landing.json
+++ b/src/locales/en/landing.json
@@ -5,7 +5,7 @@
         },
         "hero" : {
             "title" : "The video platform DAO",
-            "subtitle" : "Together, we are building a video platform controlled, owned, and operated by its users.",
+            "subtitle" : "Joystream is a video platform controlled,<0/> owned, and operated by its users",
             "metrics" : {
                 "mainTitle" : "Testnet Metrics",
                 "titles" : {
