--- a/src/locales/en/general.json
+++ b/src/locales/en/general.json
@@ -75,7 +75,8 @@
         "community" : "Community",
         "brandStory" : "Brand Story",
         "brandGuides" : "Brand Guides",
-        "downloadAssets" : "Download Assets"
+        "downloadAssets" : "Download Assets",
+        "about" : "About"
     },
     "footer" : {
         "title" : "Stay up to date",
