--- a/src/locales/en/general.json
+++ b/src/locales/en/general.json
@@ -7,7 +7,9 @@
         },
         "download" : "Download",
         "close" : "Close",
-        "accept" : "Accept"
+        "accept" : "Accept",
+        "openDiscord" : "Open Discord",
+        "learnMore" : "Learn More"
     },
     "rolesData" : {
         "validator" : "Validator",
