Remove scroll on token stats component, change hero button text

--- a/src/locales/en/general.json
+++ b/src/locales/en/general.json
@@ -9,7 +9,8 @@
         "close" : "Close",
         "accept" : "Accept",
         "openDiscord" : "Open Discord",
-        "learnMore" : "Learn More"
+        "learnMore" : "Learn More",
+        "gettingStarted" : "Getting Started"
     },
     "rolesData" : {
         "validator" : "Validator",
